// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileInfoActionTile should render correctly 1`] = `
<Styled(TouchableOpacity)
  onPress={[Function]}
>
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    resizeMode="contain"
    source="/test"
    title="test"
    url=""
  />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text="test"
      textAlign="center"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text="test"
      textAlign="center"
      textDecoration={null}
    />
  </View>
</Styled(TouchableOpacity)>
`;

exports[`ProfileInfoActionTile should render correctly when activityCompletionState is present 1`] = `
<Styled(TouchableOpacity)
  onPress={[Function]}
>
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    source={
      Object {
        "testUri": "../../../../core/src/assets/done.png",
      }
    }
    title="test"
    url=""
  />
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    resizeMode="contain"
    source="/test"
    title="test"
    url=""
  />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text="added"
      textAlign="center"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text="test"
      textAlign="center"
      textDecoration={null}
    />
  </View>
</Styled(TouchableOpacity)>
`;
